tests/bad/methods_no_this2.ae
/// fail: static methods not supported yet

struct Foo {}

def Foo::bar(x: i32) {}